[tests] Fix tests, add postman tests