@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 @Service
@@ -35,49 +34,16 @@ public class RecommendationService {
             recommendations.addAll(findSimilarVideos(rentedVideo, allVideos));
         }
 
-        recommendations.removeAll(rentedVideos);
+        rentedVideos.forEach(recommendations::remove);
 
-        List<Video> recommendedList = recommendations.stream().limit(10).collect(Collectors.toList());
+        List<Video> recommendedList = recommendations.stream().limit(10).toList();
 
         cacheService.storeRecommendationsInCache(customerId, recommendedList);
 
         return CompletableFuture.completedFuture(recommendedList);
     }
 
-//    @Async
-//    public CompletableFuture<List<Video>> getRecommendationsForCustomer(Long customerId) {
-//        return CompletableFuture.supplyAsync(() -> cacheService.getRecommendationsFromCache(customerId))
-//                .thenCompose(cachedRecommendations -> {
-//                    if (cachedRecommendations != null) {
-//                        return CompletableFuture.completedFuture(cachedRecommendations);
-//                    }
-//
-//                    CompletableFuture<List<Video>> allVideosFuture = CompletableFuture.supplyAsync(() -> videoRepository.findAll());
-//                    CompletableFuture<List<Video>> rentedVideosFuture = CompletableFuture.supplyAsync(() -> videoRepository.findRentedByCustomerId(customerId));
-//
-//                    return allVideosFuture.thenCombine(rentedVideosFuture, (allVideos, rentedVideos) -> {
-//                        Set<Video> recommendations = new HashSet<>();
-//                        for (Video rentedVideo : rentedVideos) {
-//                            recommendations.addAll(findSimilarVideos(rentedVideo, allVideos));
-//                        }
-//                        rentedVideos.forEach(recommendations::remove);
-//
-//                        List<Video> recommendedList = recommendations.stream().limit(10).toList();
-//
-//                        CompletableFuture.runAsync(() -> cacheService.storeRecommendationsInCache(customerId, recommendedList));
-//                        System.out.println(recommendedList);
-//
-//                        return recommendedList;
-//                    });
-//                });
-//    }
-
     public List<Video> findSimilarVideos(Video video, List<Video> allVideos) {
-        var similarVideos = allVideos.stream()
-                .filter(v -> !v.getId().equals(video.getId()))
-                .filter(v -> isSimilar(video, v))
-                .toList();
-        System.out.println("Found similar videos: " + similarVideos);
         return allVideos.stream()
                 .filter(v -> !v.getId().equals(video.getId()))
                 .filter(v -> isSimilar(video, v))
@@ -95,6 +61,6 @@ public class RecommendationService {
         List<String> actors2 = Arrays.asList(v2.getActors().split(","));
         if (!Collections.disjoint(actors1, actors2)) score += 2;
 
-        return score >= 5;
+        return score >= 3;
     }
 }
